# picobot-firmware

./: .gitmodules  AUTHORS.md  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/i2cdevlib/: CMakeLists.txt  I2Cdev.cpp  I2Cdev.h  README.md
dependencies/libmicroros/include/control_msgs/msg/detail/: dynamic_interface_group_values__functions.h  dynamic_interface_group_values__rosidl_typesupport_microxrcedds_c.h  dynamic_interface_group_values__struct.h  dynamic_interface_group_values__type_support.h  pid_state__struct.h
dependencies/libmicroros/include/uxr/client/: config.h
src/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp  motors.cpp  motors.hpp  pico_stdio_transport.c  pico_stdio_transport.h  pid.hpp  utils.hpp
